--- a/static/main.css
+++ b/static/main.css
@@ -43,3 +43,10 @@ html, body {
 .container p {
     margin: 100px;
 }
+
+.message {
+    font-family: Arial, sans-serif;
+    font-size: 15px;
+    color: #ff9999;
+    margin: 20px;
+}
